Inmob-Salesforce/force-app/main/default/objects/Prospecto_Web__c/Prospecto_Web__c.object-meta.xml
<CustomObject>
    <label>Prospecto Web</label>
    <nameField>
        <label>Nombre de Prospecto Web</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospectos Web</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>