Inmob-Salesforce/force-app/main/default/objects/Prospecto_Web__c/fields/Con_Error__c.field-meta.xml
<CustomField>
    <fullName>Con_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Con Error</label>
    <type>Checkbox</type>
</CustomField>