Inmob-Salesforce/force-app/main/default/objects/Prospecto_Web__c/fields/Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospecto</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Prospectos Web</relationshipLabel>
    <relationshipName>Prospecto_Web</relationshipName>
    <type>Lookup</type>
</CustomField>